simdX86/c2nimsrc/simdAvx.h

__m256i _mm256_set_epi8 (char e31, char e30, char e29, char e28, char e27, char e26, char e25, char e24, char e23, char e22, char e21, char e20, char e19, char e18, char e17, char e16, char e15, char e14, char e13, char e12, char e11, char e10, char e9, char e8, char e7, char e6, char e5, char e4, char e3, char e2, char e1, char e0);
__m256 _mm256_set_m128 (__m128 hi, __m128 lo);
__m256d _mm256_set_m128d (__m128d hi, __m128d lo);
__m256i _mm256_set_m128i (__m128i hi, __m128i lo);
__m256d _mm256_set_pd (double e3, double e2, double e1, double e0);
__m256 _mm256_set_ps (float e7, float e6, float e5, float e4, float e3, float e2, float e1, float e0);
__m256i _mm256_set1_epi16 (short a);
__m256i _mm256_set1_epi32 (int a);
__m256i _mm256_set1_epi64x (long long a);
__m256i _mm256_set1_epi8 (char a);
__m256d _mm256_set1_pd (double a);
__m256 _mm256_set1_ps (float a);
__m256i _mm256_setr_epi16 (short e15, short e14, short e13, short e12, short e11, short e10, short e9, short e8, short e7, short e6, short e5, short e4, short e3, short e2, short e1, short e0);
__m256i _mm256_setr_epi32 (int e7, int e6, int e5, int e4, int e3, int e2, int e1, int e0);
__m256i _mm256_setr_epi64x (__int64 e3, __int64 e2, __int64 e1, __int64 e0);
__m256i _mm256_setr_epi8 (char e31, char e30, char e29, char e28, char e27, char e26, char e25, char e24, char e23, char e22, char e21, char e20, char e19, char e18, char e17, char e16, char e15, char e14, char e13, char e12, char e11, char e10, char e9, char e8, char e7, char e6, char e5, char e4, char e3, char e2, char e1, char e0);
__m256 _mm256_setr_m128 (__m128 lo, __m128 hi);
__m256d _mm256_setr_m128d (__m128d lo, __m128d hi);
__m256i _mm256_setr_m128i (__m128i lo, __m128i hi);
__m256d _mm256_setr_pd (double e3, double e2, double e1, double e0);
__m256 _mm256_setr_ps (float e7, float e6, float e5, float e4, float e3, float e2, float e1, float e0);
__m256d _mm256_setzero_pd (void);
__m256 _mm256_setzero_ps (void);
__m256i _mm256_setzero_si256 (void);
__m256i _mm256_shuffle_epi32 (__m256i a, const int imm8);
__m256i _mm256_shuffle_epi8 (__m256i a, __m256i b);
__m256d _mm256_shuffle_pd (__m256d a, __m256d b, const int imm8);
__m256 _mm256_shuffle_ps (__m256 a, __m256 b, const int imm8);
__m256i _mm256_shufflehi_epi16 (__m256i a, const int imm8);
__m256i _mm256_shufflelo_epi16 (__m256i a, const int imm8);
__m256i _mm256_sign_epi16 (__m256i a, __m256i b);
__m256i _mm256_sign_epi32 (__m256i a, __m256i b);
__m256i _mm256_sign_epi8 (__m256i a, __m256i b);
__m256i _mm256_sll_epi16 (__m256i a, __m128i count);
__m256i _mm256_sll_epi32 (__m256i a, __m128i count);
__m256i _mm256_sll_epi64 (__m256i a, __m128i count);
__m256i _mm256_slli_epi16 (__m256i a, int imm8);
__m256i _mm256_slli_epi32 (__m256i a, int imm8);
__m256i _mm256_slli_epi64 (__m256i a, int imm8);
__m256i _mm256_slli_si256 (__m256i a, const int imm8);
__m128i _mm_sllv_epi32 (__m128i a, __m128i count);
__m256i _mm256_sllv_epi32 (__m256i a, __m256i count);
__m128i _mm_sllv_epi64 (__m128i a, __m128i count);
__m256i _mm256_sllv_epi64 (__m256i a, __m256i count);
__m256d _mm256_sqrt_pd (__m256d a);
__m256 _mm256_sqrt_ps (__m256 a);
__m256i _mm256_sra_epi16 (__m256i a, __m128i count);
__m256i _mm256_sra_epi32 (__m256i a, __m128i count);
__m256i _mm256_srai_epi16 (__m256i a, int imm8);
__m256i _mm256_srai_epi32 (__m256i a, int imm8);
__m128i _mm_srav_epi32 (__m128i a, __m128i count);
__m256i _mm256_srav_epi32 (__m256i a, __m256i count);
__m256i _mm256_srl_epi16 (__m256i a, __m128i count);
__m256i _mm256_srl_epi32 (__m256i a, __m128i count);
__m256i _mm256_srl_epi64 (__m256i a, __m128i count);
__m256i _mm256_srli_epi16 (__m256i a, int imm8);
__m256i _mm256_srli_epi32 (__m256i a, int imm8);
__m256i _mm256_srli_epi64 (__m256i a, int imm8);
__m256i _mm256_srli_si256 (__m256i a, const int imm8);
__m128i _mm_srlv_epi32 (__m128i a, __m128i count);
__m256i _mm256_srlv_epi32 (__m256i a, __m256i count);
__m128i _mm_srlv_epi64 (__m128i a, __m128i count);
__m256i _mm256_srlv_epi64 (__m256i a, __m256i count);
void _mm256_store_pd (double * mem_addr, __m256d a);
void _mm256_store_ps (float * mem_addr, __m256 a);
void _mm256_store_si256 (__m256i * mem_addr, __m256i a);
void _mm256_storeu_pd (double * mem_addr, __m256d a);
void _mm256_storeu_ps (float * mem_addr, __m256 a);
void _mm256_storeu_si256 (__m256i * mem_addr, __m256i a);
void _mm256_storeu2_m128 (float* hiaddr, float* loaddr, __m256 a);
void _mm256_storeu2_m128d (double* hiaddr, double* loaddr, __m256d a);
void _mm256_storeu2_m128i (__m128i* hiaddr, __m128i* loaddr, __m256i a);
__m256i _mm256_stream_load_si256 (__m256i const* mem_addr);
void _mm256_stream_pd (double * mem_addr, __m256d a);
void _mm256_stream_ps (float * mem_addr, __m256 a);
void _mm256_stream_si256 (__m256i * mem_addr, __m256i a);
__m256i _mm256_sub_epi16 (__m256i a, __m256i b);
__m256i _mm256_sub_epi32 (__m256i a, __m256i b);
__m256i _mm256_sub_epi64 (__m256i a, __m256i b);
__m256i _mm256_sub_epi8 (__m256i a, __m256i b);
__m256d _mm256_sub_pd (__m256d a, __m256d b);
__m256 _mm256_sub_ps (__m256 a, __m256 b);
__m256i _mm256_subs_epi16 (__m256i a, __m256i b);
__m256i _mm256_subs_epi8 (__m256i a, __m256i b);
__m256i _mm256_subs_epu16 (__m256i a, __m256i b);
__m256i _mm256_subs_epu8 (__m256i a, __m256i b);
int _mm_testc_pd (__m128d a, __m128d b);
int _mm256_testc_pd (__m256d a, __m256d b);
int _mm_testc_ps (__m128 a, __m128 b);
int _mm256_testc_ps (__m256 a, __m256 b);
int _mm256_testc_si256 (__m256i a, __m256i b);
int _mm_testnzc_pd (__m128d a, __m128d b);
int _mm256_testnzc_pd (__m256d a, __m256d b);
int _mm_testnzc_ps (__m128 a, __m128 b);
int _mm256_testnzc_ps (__m256 a, __m256 b);
int _mm256_testnzc_si256 (__m256i a, __m256i b);
int _mm_testz_pd (__m128d a, __m128d b);
int _mm256_testz_pd (__m256d a, __m256d b);