simdX86/simdAvxGeneric.nim

             e10: char; e9: char; e8: char; e7: char; e6: char; e5: char; e4: char; e3: char;
             e2: char; e1: char; e0: char): m256i {.importc: "_mm256_set_epi8",
    header: "immintrin.h".}
proc setm128*(hi: m128; lo: m128): m256 {.importc: "_mm256_set_m128",
                                    header: "immintrin.h".}
proc setm128d*(hi: m128d; lo: m128d): m256d {.importc: "_mm256_set_m128d",
                                        header: "immintrin.h".}
proc setm128i*(hi: m128i; lo: m128i): m256i {.importc: "_mm256_set_m128i",
                                        header: "immintrin.h".}
proc setpd*(e3: cdouble; e2: cdouble; e1: cdouble; e0: cdouble): m256d {.
    importc: "_mm256_set_pd", header: "immintrin.h".}
proc setps*(e7: cfloat; e6: cfloat; e5: cfloat; e4: cfloat; e3: cfloat; e2: cfloat;
           e1: cfloat; e0: cfloat): m256 {.importc: "_mm256_set_ps",
                                      header: "immintrin.h".}
proc set1_epi16*(a: cshort): m256i {.importc: "_mm256_set1_epi16",
                                 header: "immintrin.h".}
proc set1_epi32*(a: cint): m256i {.importc: "_mm256_set1_epi32", header: "immintrin.h".}
proc set1_epi64x*(a: clonglong): m256i {.importc: "_mm256_set1_epi64x",
                                     header: "immintrin.h".}
proc set1_epi8*(a: char): m256i {.importc: "_mm256_set1_epi8", header: "immintrin.h".}
proc set1*(a: cdouble): m256d {.importc: "_mm256_set1_pd", header: "immintrin.h".}
proc set1*(a: cfloat): m256 {.importc: "_mm256_set1_ps", header: "immintrin.h".}
proc setr_epi16*(e15: cshort; e14: cshort; e13: cshort; e12: cshort; e11: cshort;
                e10: cshort; e9: cshort; e8: cshort; e7: cshort; e6: cshort; e5: cshort;
                e4: cshort; e3: cshort; e2: cshort; e1: cshort; e0: cshort): m256i {.
    importc: "_mm256_setr_epi16", header: "immintrin.h".}
proc setr_epi32*(e7: cint; e6: cint; e5: cint; e4: cint; e3: cint; e2: cint; e1: cint; e0: cint): m256i {.
    importc: "_mm256_setr_epi32", header: "immintrin.h".}
proc setr_epi64x*(e3: int64; e2: int64; e1: int64; e0: int64): m256i {.
    importc: "_mm256_setr_epi64x", header: "immintrin.h".}
proc setr_epi8*(e31: char; e30: char; e29: char; e28: char; e27: char; e26: char; e25: char;
               e24: char; e23: char; e22: char; e21: char; e20: char; e19: char; e18: char;
               e17: char; e16: char; e15: char; e14: char; e13: char; e12: char; e11: char;
               e10: char; e9: char; e8: char; e7: char; e6: char; e5: char; e4: char;
               e3: char; e2: char; e1: char; e0: char): m256i {.
    importc: "_mm256_setr_epi8", header: "immintrin.h".}
proc setr_m128*(lo: m128; hi: m128): m256 {.importc: "_mm256_setr_m128",
                                      header: "immintrin.h".}
proc setr_m128d*(lo: m128d; hi: m128d): m256d {.importc: "_mm256_setr_m128d",
    header: "immintrin.h".}
proc setr_m128i*(lo: m128i; hi: m128i): m256i {.importc: "_mm256_setr_m128i",
    header: "immintrin.h".}
proc setr*(e3: cdouble; e2: cdouble; e1: cdouble; e0: cdouble): m256d {.
    importc: "_mm256_setr_pd", header: "immintrin.h".}
proc setr*(e7: cfloat; e6: cfloat; e5: cfloat; e4: cfloat; e3: cfloat; e2: cfloat;
          e1: cfloat; e0: cfloat): m256 {.importc: "_mm256_setr_ps",
                                     header: "immintrin.h".}
proc setzero_pd256*(): m256d {.importc: "_mm256_setzero_pd", header: "immintrin.h".}
proc setzero_ps256*(): m256 {.importc: "_mm256_setzero_ps", header: "immintrin.h".}
proc setzero_si256*(): m256i {.importc: "_mm256_setzero_si256", header: "immintrin.h".}
proc shuffle_epi32*(a: m256i; imm8: cint): m256i {.importc: "_mm256_shuffle_epi32",
    header: "immintrin.h".}
proc shuffle_epi8*(a: m256i; b: m256i): m256i {.importc: "_mm256_shuffle_epi8",
    header: "immintrin.h".}
proc shuffle*(a: m256d; b: m256d; imm8: cint): m256d {.importc: "_mm256_shuffle_pd",
    header: "immintrin.h".}
proc shuffle*(a: m256; b: m256; imm8: cint): m256 {.importc: "_mm256_shuffle_ps",
    header: "immintrin.h".}
proc shufflehi_epi16*(a: m256i; imm8: cint): m256i {.
    importc: "_mm256_shufflehi_epi16", header: "immintrin.h".}
proc shufflelo_epi16*(a: m256i; imm8: cint): m256i {.
    importc: "_mm256_shufflelo_epi16", header: "immintrin.h".}
proc sign_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_sign_epi16",
                                        header: "immintrin.h".}
proc sign_epi32*(a: m256i; b: m256i): m256i {.importc: "_mm256_sign_epi32",
                                        header: "immintrin.h".}
proc sign_epi8*(a: m256i; b: m256i): m256i {.importc: "_mm256_sign_epi8",
                                       header: "immintrin.h".}
proc sll_epi16*(a: m256i; count: m128i): m256i {.importc: "_mm256_sll_epi16",
    header: "immintrin.h".}
proc sll_epi32*(a: m256i; count: m128i): m256i {.importc: "_mm256_sll_epi32",
    header: "immintrin.h".}
proc sll_epi64*(a: m256i; count: m128i): m256i {.importc: "_mm256_sll_epi64",
    header: "immintrin.h".}
proc slli_epi16*(a: m256i; imm8: cint): m256i {.importc: "_mm256_slli_epi16",
    header: "immintrin.h".}
proc slli_epi32*(a: m256i; imm8: cint): m256i {.importc: "_mm256_slli_epi32",
    header: "immintrin.h".}
proc slli_epi64*(a: m256i; imm8: cint): m256i {.importc: "_mm256_slli_epi64",
    header: "immintrin.h".}
proc slli_si256*(a: m256i; imm8: cint): m256i {.importc: "_mm256_slli_si256",
    header: "immintrin.h".}
proc sllv_epi32*(a: m128i; count: m128i): m128i {.importc: "_mm_sllv_epi32",
    header: "immintrin.h".}
proc sllv_epi32*(a: m256i; count: m256i): m256i {.importc: "_mm256_sllv_epi32",
    header: "immintrin.h".}
proc sllv_epi64*(a: m128i; count: m128i): m128i {.importc: "_mm_sllv_epi64",
    header: "immintrin.h".}
proc sllv_epi64*(a: m256i; count: m256i): m256i {.importc: "_mm256_sllv_epi64",
    header: "immintrin.h".}
proc sqrt*(a: m256d): m256d {.importc: "_mm256_sqrt_pd", header: "immintrin.h".}
proc sqrt*(a: m256): m256 {.importc: "_mm256_sqrt_ps", header: "immintrin.h".}
proc sra_epi16*(a: m256i; count: m128i): m256i {.importc: "_mm256_sra_epi16",
    header: "immintrin.h".}
proc sra_epi32*(a: m256i; count: m128i): m256i {.importc: "_mm256_sra_epi32",
    header: "immintrin.h".}
proc srai_epi16*(a: m256i; imm8: cint): m256i {.importc: "_mm256_srai_epi16",
    header: "immintrin.h".}
proc srai_epi32*(a: m256i; imm8: cint): m256i {.importc: "_mm256_srai_epi32",
    header: "immintrin.h".}
proc srav_epi32*(a: m128i; count: m128i): m128i {.importc: "_mm_srav_epi32",
    header: "immintrin.h".}
proc srav_epi32*(a: m256i; count: m256i): m256i {.importc: "_mm256_srav_epi32",
    header: "immintrin.h".}
proc srl_epi16*(a: m256i; count: m128i): m256i {.importc: "_mm256_srl_epi16",
    header: "immintrin.h".}
proc srl_epi32*(a: m256i; count: m128i): m256i {.importc: "_mm256_srl_epi32",
    header: "immintrin.h".}
proc srl_epi64*(a: m256i; count: m128i): m256i {.importc: "_mm256_srl_epi64",
    header: "immintrin.h".}
proc srli_epi16*(a: m256i; imm8: cint): m256i {.importc: "_mm256_srli_epi16",
    header: "immintrin.h".}
proc srli_epi32*(a: m256i; imm8: cint): m256i {.importc: "_mm256_srli_epi32",
    header: "immintrin.h".}
proc srli_epi64*(a: m256i; imm8: cint): m256i {.importc: "_mm256_srli_epi64",
    header: "immintrin.h".}
proc srli_si256*(a: m256i; imm8: cint): m256i {.importc: "_mm256_srli_si256",
    header: "immintrin.h".}
proc srlv_epi32*(a: m128i; count: m128i): m128i {.importc: "_mm_srlv_epi32",
    header: "immintrin.h".}
proc srlv_epi32*(a: m256i; count: m256i): m256i {.importc: "_mm256_srlv_epi32",
    header: "immintrin.h".}
proc srlv_epi64*(a: m128i; count: m128i): m128i {.importc: "_mm_srlv_epi64",
    header: "immintrin.h".}
proc srlv_epi64*(a: m256i; count: m256i): m256i {.importc: "_mm256_srlv_epi64",
    header: "immintrin.h".}
proc store*(mem_addr: ptr cdouble; a: m256d) {.importc: "_mm256_store_pd",
    header: "immintrin.h".}
proc store*(mem_addr: ptr cfloat; a: m256) {.importc: "_mm256_store_ps",
                                       header: "immintrin.h".}
proc store_si256*(mem_addr: ptr m256i; a: m256i) {.importc: "_mm256_store_si256",
    header: "immintrin.h".}
proc storeu*(mem_addr: ptr cdouble; a: m256d) {.importc: "_mm256_storeu_pd",
    header: "immintrin.h".}
proc storeu*(mem_addr: ptr cfloat; a: m256) {.importc: "_mm256_storeu_ps",
                                        header: "immintrin.h".}
proc storeu_si256*(mem_addr: ptr m256i; a: m256i) {.importc: "_mm256_storeu_si256",
    header: "immintrin.h".}
proc storeu2*(hiaddr: ptr cfloat; loaddr: ptr cfloat; a: m256) {.
    importc: "_mm256_storeu2_m128", header: "immintrin.h".}
proc storeu2*(hiaddr: ptr cdouble; loaddr: ptr cdouble; a: m256d) {.
    importc: "_mm256_storeu2_m128d", header: "immintrin.h".}
proc storeu2*(hiaddr: ptr m128i; loaddr: ptr m128i; a: m256i) {.
    importc: "_mm256_storeu2_m128i", header: "immintrin.h".}
proc stream_load_si256*(mem_addr: ptr m256i): m256i {.
    importc: "_mm256_stream_load_si256", header: "immintrin.h".}
proc stream*(mem_addr: ptr cdouble; a: m256d) {.importc: "_mm256_stream_pd",
    header: "immintrin.h".}
proc stream*(mem_addr: ptr cfloat; a: m256) {.importc: "_mm256_stream_ps",
                                        header: "immintrin.h".}
proc stream_si256*(mem_addr: ptr m256i; a: m256i) {.importc: "_mm256_stream_si256",
    header: "immintrin.h".}
proc sub_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_sub_epi16",
                                       header: "immintrin.h".}
proc sub_epi32*(a: m256i; b: m256i): m256i {.importc: "_mm256_sub_epi32",
                                       header: "immintrin.h".}
proc sub_epi64*(a: m256i; b: m256i): m256i {.importc: "_mm256_sub_epi64",
                                       header: "immintrin.h".}
proc sub_epi8*(a: m256i; b: m256i): m256i {.importc: "_mm256_sub_epi8",
                                      header: "immintrin.h".}
proc sub*(a: m256d; b: m256d): m256d {.importc: "_mm256_sub_pd", header: "immintrin.h".}
proc sub*(a: m256; b: m256): m256 {.importc: "_mm256_sub_ps", header: "immintrin.h".}
proc subs_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_subs_epi16",
                                        header: "immintrin.h".}
proc subs_epi8*(a: m256i; b: m256i): m256i {.importc: "_mm256_subs_epi8",
                                       header: "immintrin.h".}
proc subs_epu16*(a: m256i; b: m256i): m256i {.importc: "_mm256_subs_epu16",
                                        header: "immintrin.h".}
proc subs_epu8*(a: m256i; b: m256i): m256i {.importc: "_mm256_subs_epu8",
                                       header: "immintrin.h".}
proc testc*(a: m128d; b: m128d): cint {.importc: "_mm_testc_pd", header: "immintrin.h".}
proc testc*(a: m256d; b: m256d): cint {.importc: "_mm256_testc_pd",
                                  header: "immintrin.h".}
proc testc*(a: m128; b: m128): cint {.importc: "_mm_testc_ps", header: "immintrin.h".}
proc testc*(a: m256; b: m256): cint {.importc: "_mm256_testc_ps", header: "immintrin.h".}
proc testc_si256*(a: m256i; b: m256i): cint {.importc: "_mm256_testc_si256",
                                        header: "immintrin.h".}
proc testnzc*(a: m128d; b: m128d): cint {.importc: "_mm_testnzc_pd",
                                    header: "immintrin.h".}
proc testnzc*(a: m256d; b: m256d): cint {.importc: "_mm256_testnzc_pd",
                                    header: "immintrin.h".}
proc testnzc*(a: m128; b: m128): cint {.importc: "_mm_testnzc_ps", header: "immintrin.h".}
proc testnzc*(a: m256; b: m256): cint {.importc: "_mm256_testnzc_ps",
                                  header: "immintrin.h".}
proc testnzc_si256*(a: m256i; b: m256i): cint {.importc: "_mm256_testnzc_si256",
    header: "immintrin.h".}
proc testz*(a: m128d; b: m128d): cint {.importc: "_mm_testz_pd", header: "immintrin.h".}
proc testz*(a: m256d; b: m256d): cint {.importc: "_mm256_testz_pd",
                                  header: "immintrin.h".}
